Thu Jul 13 13:45:22 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - configure.in, config.h.in, newhidups, libusb: add few more
   fixes for Solaris compatibility

Wed Jul 12 10:47:43 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - genericups: merge type 23 in type 22

Mon Jul 10 20:33:13 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - mge-shut: fix the duplicate test.battery.start

Mon Jul 10 20:05:02 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - genericups: add type 23 for CyberPower 725SL (and maybe others)

   (David Kaufman) [Alioth Bug #302337]

Mon Jul 10 07:00:56 UTC 2006 / Arnaud Quette <aquette.dev@gmail.com>

 - rhino: new driver for Microsol Rhino UPS hardware
 - solis:
   * add solaris compatibility,
   * add internal / external shutdown programming,
   * save external shutdown programming to ups,
   * support new cables for solis 3
   (from Silvino B. Magalhães)

 - newhidups: fix notification handling on linux 2.4.32, which
   was failing with EINVAL (from Rodrigo Martins de Matos Ventura)

 - powercom.c: rename shutdown() to nut_shutdown() to avoid naming
   conflict on LynxOS,
 - proto.h: add some guards and missing prototypes for LynxOS.

   (Olli Savia) [Alioth Bug #303460]

 - energizerups: fix communication problems for Linux 2.6.15

   (Viktor T. Toth) [Alioth Bug #303393]

 - upsset: assumes stdin closed when called non-POST

   (Julius Malkiewicz) [Alioth Bug #302734]

 - config.sub, config.guess: update with automake-1.9 files

   (Charles Lepple) [Alioth Bug #302339]

 - driver.list: add Cyberpower 550SL supported by genericups upstype=7

   (Thomas Suckow) [Alioth Bug #302851]

 - apcsmart.8: add a comment to make a power cycle when switching
   from USB to serial (and perhaps vice versa) communication
   (from Ryan Underwood)

 - apcsmart: add support for the Smart-UPS with 6TI firmware and
   bump driver version to 1.99.8

   (Andrew Day) [Alioth Bug #303390]

2.0.4-pre1
